tests/snapshots/wallets/miner_addresses/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - miner-addresses
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <WALLET_NAME>

Usage: kermit wallets miner-addresses <WALLET_NAME>

For more information, try '--help'.
